--- Auto-Git Commit ---

--- a/Virtualization/KVM/2. 模块初始化以及创建虚拟机QEMU/2. QEMU初始化.md
+++ b/Virtualization/KVM/2. 模块初始化以及创建虚拟机QEMU/2. QEMU初始化.md
@@ -101,7 +101,7 @@ int main()
  |   |   |   |   |   ├─ render_memory_region(&view, mr, ...) // 根据 mr 生成 view
  |   |   |   |   |   └─ flatview_simplify(&view) // 合并相邻的 FlatRange
  |   |   |   |   └─ address_space_set_flatview(as);
- |   |   |   |       ├─ address_space_update_topology_pass(AddressSpce, FlatView_old, FlatView_new)
+ |   |   |   |       ├─ address_space_update_topology_pass(AddressSpce, FlatView_old, FlatView_new) // 遍历FlatView的所有FlatRange, 也就是得到若干个 MemoryRegionSection, 将其注册到KVM
  |   |   |   |       |   └─ MEMORY_LISTENER_UPDATE_REGION(frnew, as, Forward, region_add)        // 回调函数 region_add, 对应的是kvm_region_add()
  |   |   |   |       |   └─ kvm_region_add()        // region_add 对应的回调实现
  |   |   |   |       |       └─ kvm_set_phys_mem()  // 根据传入的 section 填充 KVMSlot
