--- a/Virtualization/QEMU/3. memory/1. QEMU中的内存管理介绍.md
+++ b/Virtualization/QEMU/3. memory/1. QEMU中的内存管理介绍.md
@@ -7,7 +7,7 @@
 - [可热插拔的guest内存](#可热插拔的guest内存)
 - [真实内存资源Memory backends](#真实内存资源memory-backends)
 - [与内存相关的数据结构关系图](#与内存相关的数据结构关系图)
-- [RAM blocks和ram\_addr\_t地址空间](#ram-blocks和ram_addr_t地址空间)
+- [RAM blocks和ram_addr_t地址空间](#ram-blocks和ram_addr_t地址空间)
 - [跟踪脏页](#跟踪脏页)
 - [AddressSpace和MemoryRegion](#addressspace和memoryregion)
 
@@ -163,7 +163,7 @@ struct HostMemoryBackend {
 
 ![](./images/2019-06-05-18-53-12.png)
 
-# RAM blocks和ram\_addr\_t地址空间
+# RAM blocks和ram_addr_t地址空间
 
 **HostMemoryBackend对象中的内存(guest物理内存**)被**实际映射**到通过**qemu\_ram\_alloc**()函数（代码定义在**exec.c**中）分配的**RAMBlock数据结构**中。
 
