--- a/Virtualization/QEMU/3. memory/2. 主要结构体分析.md
+++ b/Virtualization/QEMU/3. memory/2. 主要结构体分析.md
@@ -98,8 +98,9 @@ struct MemoryRegion {
     bool enabled;
     bool warning_printed; /* For reservations */
     uint8_t vga_logging_count;
-    // 
+    // 对于子区域, 指向原始的MR
     MemoryRegion *alias;
+    // 在原始MR中的偏移
     hwaddr alias_offset;
     int32_t priority;
     // 子区域链表头
@@ -126,6 +127,10 @@ QEMU通过MemoryRegion来管理**虚拟机物理内存**，**一个AddressSpace*
 MemoryRegion有**多种类型**，可以表示一段**ram**、**rom**、**MMIO**、**alias**.
 
 alias表示**一个MemoryRegion**的**一部分区域**，**MemoryRegion**也可以表示**一个container**，这就表示它**只是其他若干个MemoryRegion的容器**。
+
+
+实际上**虚拟机的ram申请**时时一次性申请的一个**完整的ram**，记录在**一个MR**中，之后又对此ram**按照size进行了划分**，形成**subregion**, 而subregion 的**alias**便指向**原始的MR**，而 `alias_offset` 便是在原始ram中的偏移。对于系统地址空间的ram，会把刚才得到的subregion注册到系统中，父MR是刚才提到的全局MR system_memory,subregions_link是链表节点。前面提到，实际关联host内存的是subregion->alias指向的MR，其ram_addr是该MR在虚拟机的物理内存中的偏移，具体是由RAMBlock->offset获得的，RAMBlock最直接的接触host的内存，看下其结构
+
 
 **结构体MemoryRegion**是联系**guest物理地址空间**和描述**真实内存的RAMBlocks(宿主机虚拟地址**)之间的桥梁。
 
