--- Auto-Git Commit ---

--- a/Virtualization/QEMU/3. memory/2. 主要结构体分析.md
+++ b/Virtualization/QEMU/3. memory/2. 主要结构体分析.md
@@ -54,7 +54,19 @@ struct AddressSpace {
 
 qemu中用**AddressSpace**用来表示**CPU/设备**看到的**内存**.
 
+所有的AddressSpace是通过一个全局链表`address_spaces`链接起来, 每个AddressSpace代表了**一种用途的内存**, 比如"memory"、"I/O"
+
+```cpp
+// 初始化 address_space_memory 全局 AddressSpace, 将 system_memory 作为 root(根MR)
+address_space_init(&address_space_memory, system_memory, "memory");
+
+// 初始化 address_space_io 全局 AddressSpace, 将 system_io 作为 root(根MR)
+address_space_init(&address_space_io, system_io, "I/O");   
+```
+
 AddressSpace下面**root**及其**子树**形成了**一个虚拟机**的**物理地址！！！**
+
+这个树就是由MemoryRegion构成
 
 ## MemoryRegion: 虚拟机物理地址GPA到主机虚拟地址HVA
 
