--- Auto-Git Commit ---

--- a/Virtualization/QEMU/3. memory/2. 主要结构体分析.md
+++ b/Virtualization/QEMU/3. memory/2. 主要结构体分析.md
@@ -66,7 +66,7 @@ address_space_init(&address_space_io, system_io, "I/O");
 
 AddressSpace下面**root**及其**子树**形成了**一个虚拟机**的**物理地址！！！**
 
-这个树就是由MemoryRegion构成
+这个树就是由MemoryRegion构成, MemoryRegion负责管理host的内存，理论上是树状结构，但是实际上根据代码来看仅仅有两层，也就是说AddressSpace下面是MR root, 再往下就是子MR链表, 头subregions, 
 
 ## MemoryRegion: 虚拟机物理地址GPA到主机虚拟地址HVA
 
@@ -120,7 +120,7 @@ struct MemoryRegion {
     // 子区域链表节点
     QTAILQ_ENTRY(MemoryRegion) subregions_link;
     QTAILQ_HEAD(, CoalescedMemoryRange) coalesced;
-    //MemoryRegion的名字,调试时使用
+    //MemoryRegion的名字
     const char *name;
     //IOevent文件描述符的管理
     unsigned ioeventfd_nb;
@@ -128,9 +128,6 @@ struct MemoryRegion {
 };
 ```
 
-怎么可以把qemu层的内存管理再分为三个层次，MemoryRegion就位于顶级抽象层或者说比较偏向于host端，qemu中两个全局的MemoryRegion，分别是system_memory和system_io，不过两个均是以指针的形式存在，在地址空间的时候才会对对其分配具体的内存并初始化。
-
-MemoryRegion负责管理host的内存，理论上是树状结构，但是实际上根据代码来看仅仅有两层，
 
 **一个AddressSpace**下面包含**多个MemoryRegion**，这些MemoryRegion结构通过**树**连接起来，**树的根**是**AddressSpace**的**root域**。
 
