--- Auto-Git Commit ---

--- a/Virtualization/QEMU/3. memory/2. 主要结构体分析.md
+++ b/Virtualization/QEMU/3. memory/2. 主要结构体分析.md
@@ -54,7 +54,7 @@ struct AddressSpace {
 
 qemu中用**AddressSpace**用来表示**CPU/设备**看到的**内存**.
 
-所有的AddressSpace是通过一个全局链表`address_spaces`链接起来, 每个AddressSpace代表了**一种用途的内存**, 比如"memory"、"I/O"
+所有的AddressSpace是通过一个**全局链表**`address_spaces`链接起来, 每个AddressSpace代表了**一种用途的内存**, 比如"memory"、"I/O"
 
 ```cpp
 // 初始化 address_space_memory 全局 AddressSpace, 将 system_memory 作为 root(根MR)
@@ -64,9 +64,9 @@ address_space_init(&address_space_memory, system_memory, "memory");
 address_space_init(&address_space_io, system_io, "I/O");   
 ```
 
-AddressSpace下面**root**及其**子树**形成了**一个虚拟机**的**物理地址！！！**
+所有AddressSpace下面**root**及其**子树**形成了**一个虚拟机**的**物理地址！！！**
 
-这个树就是由MemoryRegion构成, MemoryRegion负责管理host的内存，理论上是树状结构，但是实际上根据代码来看仅仅有两层，也就是说AddressSpace下面是MR root, 再往下就是子MR链表, 头subregions, 
+见下面图
 
 ## MemoryRegion: 虚拟机物理地址GPA到主机虚拟地址HVA
 
@@ -128,10 +128,11 @@ struct MemoryRegion {
 };
 ```
 
-
 **一个AddressSpace**下面包含**多个MemoryRegion**，这些MemoryRegion结构通过**树**连接起来，**树的根**是**AddressSpace**的**root域**。
 
 **每个MemoryRegion树！！！** 代表了**一类作用的内存**，如**系统内存空间**(`system_memory`)或**IO内存空间**(`system_io`), 这两个是qemu中的**两个全局MemoryRegion**。
+
+这个树就是由MemoryRegion构成, MemoryRegion负责管理host的内存，理论上是树状结构，但是实际上根据代码来看仅仅有两层，也就是说AddressSpace下面是MR root, 再往下就是子MR链表, 头是subregions, 子MR通过`subregions_link`链接.
 
 每个MemoryRegion有**多种类型**，可以表示一段**ram**、**rom**、**MMIO**、**alias**.
 
