--- a/Virtualization/QEMU/3. memory/2. 主要结构体分析.md
+++ b/Virtualization/QEMU/3. memory/2. 主要结构体分析.md
@@ -146,11 +146,11 @@ alias表示**一个MemoryRegion**的**一部分区域**，**MemoryRegion**也可
 
 对于系统地址空间的ram，会把刚才得到的subregion注册到系统中，父MR是**全局MR** `system_memory`, `subregions_link`是**链表节点**。
 
-前面提到，**实际关联host内存**的是`子MR->alias`指向的**MR**，`子MR->alias_offset`指向
+前面提到，**实际关联host内存**的是`子MR->alias`指向的**MR**，`子MR->alias_offset`指向该子MR在父MR中的地址偏移位置.
 
 其`RAMBlock->offset`是该MR在**虚拟机的物理内存中的偏移**, RAMBlock最直接的接触host的内存，看下其结构
 
-注: 子MR不关联host内存, 即不关联HVA
+注: 子MR不关联host内存, 即不关联HVA, 实际关联内存的是`子MR->alias`指向的MR
 
 下面有张图
 
@@ -163,7 +163,7 @@ MemoryRegion直接操作内存，**每一棵MR树的树根**对应一个**RAMBlo
 
 **每个MemoryRegion结构体**中定义了`RAMBlock *ram\_block`成员指向**其对应的RAMBlock**，而在**RAMBlock**结构体中则定义了`struct MemoryRegion *mr`指向**对应的MemoryRegion**。
 
-## RAMBlock: HVA
+## RAMBlock: 主机虚拟地址HVA
 
 ```cpp
 // include/exec/ram_addr.h
