--- Auto-Git Commit ---

--- a/Virtualization/QEMU/3. memory/2. 主要结构体分析.md
+++ b/Virtualization/QEMU/3. memory/2. 主要结构体分析.md
@@ -64,7 +64,9 @@ address_space_init(&address_space_memory, system_memory, "memory");
 address_space_init(&address_space_io, system_io, "I/O");   
 ```
 
-所有AddressSpace下面**root**及其**子树**形成了**一个虚拟机**的**物理地址！！！**
+### 
+
+所有AddressSpace下面**root**及其**子树**形成了**一个虚拟机**的**物理地址！！！**, 也就是说一个AddressSpace对应多个MemoryRegion
 
 见下面图
 
@@ -150,15 +152,14 @@ alias表示**一个MemoryRegion**的**一部分区域**，**MemoryRegion**也可
 
 注: 子MR不关联host内存, 即不关联HVA, 实际**关联内存**的是`子MR->alias`指向的MR
 
-### 
-
-其`RAMBlock->offset`是该MR在**虚拟机的物理内存中的偏移**, RAMBlock最直接的接触host的内存，看下其结构
-
 下面有张图
 
 ### MR与RAMBlock
 
 MemoryRegion直接操作内存，**每一棵MR树的树根**对应一个**RAMBlock**，其host即为通过mmap()分配的HVA
+
+
+其`RAMBlock->offset`是该MR在**虚拟机的物理内存中的偏移**, RAMBlock最直接的接触host的内存，看下其结构
 
 
 **结构体MemoryRegion**是联系**guest物理地址空间**和描述**真实内存的RAMBlocks(宿主机虚拟地址**)之间的桥梁。
