--- Auto-Git Commit ---

--- a/Virtualization/QEMU/3. memory/2. 主要结构体分析.md
+++ b/Virtualization/QEMU/3. memory/2. 主要结构体分析.md
@@ -156,15 +156,15 @@ alias表示**一个MemoryRegion**的**一部分区域**，**MemoryRegion**也可
 
 ### MR与RAMBlock
 
-MemoryRegion直接操作内存，**每一棵MR树的树根**对应一个**RAMBlock**，其host即为通过mmap()分配的HVA
-
-
-其`RAMBlock->offset`是该MR在**虚拟机的物理内存中的偏移**, RAMBlock最直接的接触host的内存，看下其结构
-
+MR与RAMBLOCK是一对一的.
 
 **结构体MemoryRegion**是联系**guest物理地址空间**和描述**真实内存的RAMBlocks(宿主机虚拟地址**)之间的桥梁。
 
-**每个MemoryRegion结构体**中定义了`RAMBlock *ram\_block`成员指向**其对应的RAMBlock**，而在**RAMBlock**结构体中则定义了`struct MemoryRegion *mr`指向**对应的MemoryRegion**。
+**每个MemoryRegion结构体**中定义了`RAMBlock *ram_block`成员指向**其对应的RAMBlock**，而在**RAMBlock**结构体中则定义了`struct MemoryRegion *mr`指向**对应的MemoryRegion**。
+
+MemoryRegion直接操作内存，**每一棵MR树的树根**对应一个**RAMBlock**，其host即为通过mmap()分配的HVA
+
+其`RAMBlock->offset`是该MR在**虚拟机的物理内存中的偏移**, RAMBlock最直接的接触host的内存，看下其结构
 
 ## RAMBlock: 主机虚拟地址HVA
 
@@ -177,7 +177,7 @@ struct RAMBlock {
     struct MemoryRegion *mr;
     uint8_t *host;  //RAMBlock在host上的虚拟内存起始位置, 即HVA
     uint8_t *colo_cache; /* For colo, VM's ram cache */
-    ram_addr_t offset;  //在所有的RAMBlock中offset, 即在vm物理内存中的偏移, GPA
+    ram_addr_t offset;  // 在vm物理内存中的偏移, GPA
     ram_addr_t used_length; //已使用长度
     ram_addr_t max_length;  //最大分配内存
     void (*resized)(const char*, uint64_t length, void *host);
@@ -208,7 +208,7 @@ struct RAMBlock {
 
 然而**ram\_addr\_t命名空间**并**不等同**于**guest物理内存空间！！！**，它仅表示**所有RAMBlock集合**构成的**一个地址空间**。
 
-Address, MemoryRegion, RAMBlock关系如下图所示。
+## Address, MemoryRegion, RAMBlock关系
 
 ![](./images/2019-06-10-11-12-09.png)
 
