--- Auto-Git Commit ---

--- a/Virtualization/QEMU/3. memory/2. 主要结构体分析.md
+++ b/Virtualization/QEMU/3. memory/2. 主要结构体分析.md
@@ -197,7 +197,7 @@ struct RAMBlock {
 };
 ```
 
-每一个ram\_block还会被连接到全局的'ram\_list'链表上。
+每一个ram\_block还会被连接到全局的`'ram_list'`链表上。
 
 **RAMBlock结构体**中的
 
