--- a/Virtualization/QEMU/3. memory/2. 主要结构体分析.md
+++ b/Virtualization/QEMU/3. memory/2. 主要结构体分析.md
@@ -56,6 +56,8 @@ qemu中用**AddressSpace**用来表示**CPU/设备**看到的**内存**.
 
 所有的AddressSpace是通过一个**全局链表**`address_spaces`链接起来, 每个AddressSpace代表了**一种用途的内存**, 比如"memory"、"I/O"
 
+全局的AddressSpace, address_space_memory和address_space_io，一个是管理系统地址空间，一个是IO地址空间
+
 ```cpp
 // 初始化 address_space_memory 全局 AddressSpace, 将 system_memory 作为 root(根MR)
 address_space_init(&address_space_memory, system_memory, "memory");
@@ -175,7 +177,7 @@ typedef uint64_t ram_addr_t;
 struct RAMBlock {
     struct rcu_head rcu; //该数据结构受rcu机制保护
     struct MemoryRegion *mr;
-    uint8_t *host;  //RAMBlock在host上的虚拟内存起始位置, 即HVA
+    uint8_t *host;  // RAMBlock在host上的虚拟内存起始位置, 即HVA
     uint8_t *colo_cache; /* For colo, VM's ram cache */
     ram_addr_t offset;  // 在vm物理内存中的偏移, GPA
     ram_addr_t used_length; //已使用长度
@@ -185,6 +187,7 @@ struct RAMBlock {
     /* Protected by iothread lock.  */
     char idstr[256];    //RAMBlock的ID
     /* RCU-enabled, writes protected by the ramlist lock */
+    // 全局链表
     QLIST_ENTRY(RAMBlock) next;
     QLIST_HEAD(, RAMBlockNotifier) ramblock_notifiers;
     int fd; //映射文件的描述符
@@ -197,6 +200,10 @@ struct RAMBlock {
 };
 ```
 
+理论上**一个RAMBlock**就代表**host的一段虚拟内存**，host指向**申请的ram的虚拟地址**,是HVA。
+
+所有的RAMBlock通过**next字段**连接起来，表头保存在一个**全局的RAMList结构**中，但是根据代码来看，**原始MR分配**内存时分配的是**一整块block**，之所以这样做也许是为了扩展用吧！！RAMList中有个字段**mru_block指针**，指向**最近使用的block**，这样需要**遍历所有的block**时，先判断指定的block是否是`mru_block`，如果不是再进行遍历从而提高效率。
+
 每一个ram\_block还会被连接到全局的`'ram_list'`链表上。
 
 **RAMBlock结构体**中的
@@ -204,7 +211,7 @@ struct RAMBlock {
 - uint8\_t \***host**指向**动态分配的内存**，用于表示**实际的虚拟机物理内存**，指向**host**上**虚拟内存的起始值**，
 - ram\_addr\_t **offset**表示**当前RAMBlock**相对于**RAMList**（描述**host虚拟内存的全局链表**）的**偏移量**。
 
-也就是说**ram\_addr\_t offset**位于一个**全局命名空间**中，可以通过此offset偏移量**定位某个RAMBlock**。
+也就是说`ram_addr_t offset`位于一个**全局命名空间**中，可以通过此offset偏移量**定位某个RAMBlock**。
 
 然而**ram\_addr\_t命名空间**并**不等同**于**guest物理内存空间！！！**，它仅表示**所有RAMBlock集合**构成的**一个地址空间**。
 
