--- Auto-Git Commit ---

--- a/Virtualization/QEMU/3. memory/2. 主要结构体分析.md
+++ b/Virtualization/QEMU/3. memory/2. 主要结构体分析.md
@@ -59,9 +59,13 @@ qemu中用**AddressSpace**用来表示**CPU/设备**看到的**内存**.
 全局的AddressSpace, address_space_memory和address_space_io，一个是管理系统地址空间，一个是IO地址空间
 
 ```cpp
+// 生成全局 system_memory 的 MemoryRegion
+memory_region_init(system_memory, NULL, "system", UINT64_MAX);
 // 初始化 address_space_memory 全局 AddressSpace, 将 system_memory 作为 root(根MR)
 address_space_init(&address_space_memory, system_memory, "memory");
 
+// 生成全局 system_io 的 MemoryRegion
+memory_region_init_io(system_io, NULL, &unassigned_io_ops, NULL, "io", 65536);
 // 初始化 address_space_io 全局 AddressSpace, 将 system_io 作为 root(根MR)
 address_space_init(&address_space_io, system_io, "I/O");   
 ```
