--- Auto-Git Commit ---

--- a/Virtualization/QEMU/3. memory/2. 主要结构体分析.md
+++ b/Virtualization/QEMU/3. memory/2. 主要结构体分析.md
@@ -54,7 +54,7 @@ struct AddressSpace {
 
 qemu中用**AddressSpace**用来表示**CPU/设备**看到的**内存**.
 
-所有的AddressSpace是通过一个**全局链表**`address_spaces`链接起来, 每个AddressSpace代表了**一种用途的内存**, 比如"memory"、"I/O"
+, 每个AddressSpace代表了**一种用途的内存**, 比如"memory"、"I/O"
 
 全局的AddressSpace, address_space_memory和address_space_io，一个是管理系统地址空间，一个是IO地址空间
 
@@ -69,6 +69,10 @@ memory_region_init_io(system_io, NULL, &unassigned_io_ops, NULL, "io", 65536);
 // 初始化 address_space_io 全局 AddressSpace, 将 system_io 作为 root(根MR)
 address_space_init(&address_space_io, system_io, "I/O");   
 ```
+
+### 全局链表
+
+所有的AddressSpace是通过一个**全局链表**`address_spaces`链接起来, 每个 AddressSpace 的`address_spaces_link`作为链表节点, 表头保存在全局的 AddressSpace 结构中.
 
 ### 2.1.1. AddressSpace与MemoryRegion
 
@@ -227,7 +231,7 @@ struct RAMBlock {
 
 AddressSpace下面**root及其子树**形成了一个**虚拟机的物理地址！！！**，但是在往**kvm进行设置！！！**的时候，需要将其转换为一个**平坦的地址模型**，也就是从0开始的。
 
-这个就用FlatView表示，**一个AddressSpace**对应**一个FlatView**。
+这个就用FlatView表示，**一个AddressSpace**对应**一个FlatView**。FlatView管理MR展开后得到的所有 FlatRange .
 
 ![2020-02-27-22-15-39.png](./images/2020-02-27-22-15-39.png)
 
