--- Auto-Git Commit ---

--- a/Virtualization/QEMU/3. memory/2. 主要结构体分析.md
+++ b/Virtualization/QEMU/3. memory/2. 主要结构体分析.md
@@ -74,6 +74,8 @@ address_space_init(&address_space_io, system_io, "I/O");
 
 所有的AddressSpace是通过一个**全局链表**`address_spaces`链接起来, 每个 AddressSpace 的`address_spaces_link`作为链表节点, 表头保存在全局的 AddressSpace 结构中.
 
+所以在上面提到的`address_space_init`函数中有`QTAILQ_INSERT_TAIL(&address_spaces, as, address_spaces_link);`操作.
+
 ### 2.1.1. AddressSpace与MemoryRegion
 
 所有AddressSpace下面**root**及其**子树**形成了**一个虚拟机**的**物理地址！！！**, 也就是说一个AddressSpace对应多个MemoryRegion
@@ -150,13 +152,13 @@ struct MemoryRegion {
 
 **结构体MemoryRegion**是联系**guest物理地址空间**和描述**真实内存的RAMBlocks(宿主机虚拟地址**)之间的桥梁。
 
-### 2.2.1. alias: 子区域
+### 2.2.1. 子区域与子区域链表
 
 alias表示**一个MemoryRegion**的**一部分区域**，**MemoryRegion**也可以表示**一个container**，这就表示它**只是其他若干个MemoryRegion的容器**。
 
 实际上**虚拟机的ram申请**时时一次性申请的一个**完整的ram**，记录在**一个MR**中，之后又对此ram**按照size进行了划分**，形成**子MR**, 而子MR的**alias**便指向**原始的MR**，而 `alias_offset` 便是在**原始ram**中的**偏移**。
 
-对于系统地址空间的ram，会把刚才得到的subregion注册到系统中，父MR是**全局MR** `system_memory`, `subregions_link`是**链表节点**。
+对于系统地址空间的ram，会把刚才得到的subregion注册到系统中，父MR是**全局MR** `system_memory`, subregions_link`是**链表节点**, 
 
 前面提到，**实际关联host内存**的是`子MR->alias`指向的**MR**，`子MR->alias_offset`指向该子MR在父MR中的地址长度的偏移.
 
