--- Auto-Git Commit ---

--- a/Virtualization/QEMU/3. memory/2. 主要结构体分析.md
+++ b/Virtualization/QEMU/3. memory/2. 主要结构体分析.md
@@ -70,19 +70,19 @@ memory_region_init_io(system_io, NULL, &unassigned_io_ops, NULL, "io", 65536);
 address_space_init(&address_space_io, system_io, "I/O");   
 ```
 
-### 全局链表
+### 2.1.1. 全局链表
 
 所有的AddressSpace是通过一个**全局链表**`address_spaces`链接起来, 每个 AddressSpace 的`address_spaces_link`作为链表节点, 表头保存在全局的 AddressSpace 结构中.
 
 所以在上面提到的`address_space_init`函数中有`QTAILQ_INSERT_TAIL(&address_spaces, as, address_spaces_link);`操作.
 
-### 2.1.1. AddressSpace与MemoryRegion
+### 2.1.2. AddressSpace与MemoryRegion
 
 所有AddressSpace下面**root**及其**子树**形成了**一个虚拟机**的**物理地址！！！**, 也就是说一个 AddressSpace 对应多个MemoryRegion
 
 见下面图
 
-## 2.2. MemoryRegion: 虚拟机物理地址GPA到主机虚拟地址HVA
+## 2.2. MemoryRegion: 虚拟机物理地址GPA到主机虚拟内存HVA(RAMBlock)的桥梁
 
 ```cpp
 // include/exec/memory.h
@@ -142,17 +142,19 @@ struct MemoryRegion {
 };
 ```
 
-**一个AddressSpace**下面包含**多个MemoryRegion**，这些MemoryRegion结构通过**树**连接起来，**树的根**是**AddressSpace**的**root域**。
-
-**每个MemoryRegion树！！！** 代表了**一类作用的内存**，如**系统内存空间**(`system_memory`)或**IO内存空间**(`system_io`), 这两个是qemu中的**两个全局MemoryRegion**。
-
-这个树就是由MemoryRegion构成, MemoryRegion负责管理host的内存，理论上是树状结构，但是实际上根据代码来看仅仅有两层，也就是说AddressSpace下面是MR root, 再往下就是子MR链表, 头是subregions, 子MR通过`subregions_link`链接.
-
 每个MemoryRegion有**多种类型**，可以表示一段**ram**、**rom**、**MMIO**、**alias**.
 
 **结构体MemoryRegion**是联系**guest物理地址空间**和描述**真实内存的RAMBlocks(宿主机虚拟地址**)之间的桥梁。
 
-### 2.2.1. 子区域与子区域链表
+### 2.2.1. 树结构? 其实只有一个root
+
+**一个AddressSpace**下面包含**多个MemoryRegion**，这些MemoryRegion结构通过**树**连接起来，**树的根**是**AddressSpace**的**root域**。
+
+**每个MemoryRegion树！！！** 代表了**一类作用的内存**，如**系统内存空间**(`system_memory`)或**IO内存空间**(`system_io`), 这两个是qemu中的**两个全局MemoryRegion**。
+
+这个树就是由MemoryRegion构成, MemoryRegion负责管理host的内存，理论上是树状结构，但是实际上根据代码来看仅仅有两层，也就是说AddressSpace下面是MR root, root往下再没有其他MR节点了, 而再往下就是子MR链表, 头是subregions, 子MR通过`subregions_link`链接.
+
+### 2.2.2. 子区域与子区域链表
 
 alias表示**一个MemoryRegion**的**一部分区域**，**MemoryRegion**也可以表示**一个container**，这就表示它**只是其他若干个MemoryRegion的容器**。
 
@@ -166,7 +168,7 @@ alias表示**一个MemoryRegion**的**一部分区域**，**MemoryRegion**也可
 
 下面有张图
 
-### 2.2.2. MemoryRegion与RAMBlock
+### 2.2.3. MemoryRegion与RAMBlock
 
 MR与RAMBLOCK是一对一的.
 
