--- Auto-Git Commit ---

--- a/Virtualization/QEMU/3. memory/2. 主要结构体分析.md
+++ b/Virtualization/QEMU/3. memory/2. 主要结构体分析.md
@@ -180,7 +180,7 @@ MemoryRegion直接操作内存，**每一棵MR树的树根**对应一个**RAMBlo
 
 其`RAMBlock->offset`是该MR在**虚拟机的物理内存中的偏移**, RAMBlock最直接的接触host的内存，看下其结构
 
-## 2.3. RAMBlock: 主机虚拟地址HVA
+## 2.3. RAMBlock: 主机一段虚拟内存HVA
 
 ```cpp
 // include/exec/ram_addr.h
@@ -225,7 +225,11 @@ struct RAMBlock {
 
 ### 全局链表
 
-所有的RAMBlock通过**next字段**连接起来，表头保存在一个**全局的RAMList结构**中，但是根据代码来看，**原始MR分配**内存时分配的是**一整块block**，之所以这样做也许是为了扩展用吧！！RAMList中有个字段**mru_block指针**，指向**最近使用的block**，这样需要**遍历所有的block**时，先判断指定的block是否是`mru_block`，如果不是再进行遍历从而提高效率。
+这个全局链表描述了整个虚拟机使用的真正的**所有主机虚拟内存**.
+
+所有的RAMBlock通过**next字段**连接起来，表头保存在一个**全局的RAMList结构**中，但是根据代码来看，**原始MR分配**内存时分配的是**一整块block**，之所以这样做也许是为了扩展用吧！！
+
+**RAMList**中有个字段**mru_block指针**，指向**最近使用的block**，这样需要**遍历所有的block**时，先判断指定的block是否是`mru_block`，如果不是再进行遍历从而提高效率。
 
 每一个ram\_block还会被连接到全局的`'ram_list'`链表上。
 
