--- Auto-Git Commit ---

--- a/Virtualization/QEMU/3. memory/2. 主要结构体分析.md
+++ b/Virtualization/QEMU/3. memory/2. 主要结构体分析.md
@@ -52,9 +52,9 @@ struct AddressSpace {
 
 qemu中用**AddressSpace**用来表示**CPU/设备**看到的**内存**.
 
-, 每个AddressSpace代表了**一种用途的内存**, 比如"memory"、"I/O"
+每个AddressSpace代表了**一种用途的内存**, 比如"memory"、"I/O"
 
-全局的AddressSpace, address_space_memory和address_space_io，一个是管理系统地址空间，一个是IO地址空间
+qemu有几个全局的AddressSpace, 比如address_space_memory和address_space_io，一个是管理系统地址空间，一个是IO地址空间
 
 ```cpp
 // 生成全局 system_memory 的 MemoryRegion
@@ -79,6 +79,8 @@ address_space_init(&address_space_io, system_io, "I/O");
 一个 AddressSpace 对应多个 MemoryRegion .
 
 所有AddressSpace下面**root**及其**子树**形成了**一个虚拟机**的**物理地址！！！**, 也就是说一个 AddressSpace 对应多个MemoryRegion
+
+MR管理host的内存，那么address_space管理的更偏向于虚拟机。
 
 见下面图
 
