--- Auto-Git Commit ---

--- a/Virtualization/QEMU/3. memory/2. 主要结构体分析.md
+++ b/Virtualization/QEMU/3. memory/2. 主要结构体分析.md
@@ -70,7 +70,12 @@ address_space_init(&address_space_io, system_io, "I/O");
 
 ### 2.1.1. 全局链表
 
-**所有的AddressSpace**是通过一个**全局链表**`address_spaces`链接起来, 每个 AddressSpace 的`address_spaces_link`作为链表节点, 表头保存在全局的 AddressSpace 结构中.
+**所有的AddressSpace**是通过一个**全局链表**`address_spaces`链接起来, 每个 AddressSpace 的`address_spaces_link`作为链表节点.
+
+```cpp
+static QTAILQ_HEAD(, AddressSpace) address_spaces
+    = QTAILQ_HEAD_INITIALIZER(address_spaces);
+```
 
 所以在上面提到的`address_space_init`函数中有`QTAILQ_INSERT_TAIL(&address_spaces, as, address_spaces_link);`操作.
 
@@ -80,7 +85,7 @@ address_space_init(&address_space_io, system_io, "I/O");
 
 所有AddressSpace下面**root**及其**子树**形成了**一个虚拟机**的**物理地址！！！**, 也就是说一个 AddressSpace 对应多个MemoryRegion
 
-MR管理host的内存，那么address_space管理的更偏向于虚拟机。
+MR管理host的内存，那么address_space管理的更偏向于虚拟机。AddressSpace是将MR映射到虚拟机的物理地址空间.
 
 见下面图
 
@@ -324,10 +329,6 @@ MemoryRegionSection表示的是**MemoryRegion的一部分**。
 
 ## 2.7. MemoryListener
 
-为了**监控虚拟机的物理地址访问**，对于**每一个AddressSpace**，会有**一个MemoryListener**与之对应。每当**物理映射（GPA\-\>HVA**)发生改变时，会**回调这些函数**。
-
-所有的MemoryListener都会挂在**全局变量memory\_listeners链表**上。同时，AddressSpace也会有一个链表连接器自己注册的MemoryListener。
-
 ```cpp
 // include/exec/memory.h
 struct MemoryListener {
@@ -357,6 +358,15 @@ struct MemoryListener {
     QTAILQ_ENTRY(MemoryListener) link;
     QTAILQ_ENTRY(MemoryListener) link_as;
 };
+```
+
+为了**监控虚拟机的物理地址访问**，对于**每一个AddressSpace**，会有**一个MemoryListener**与之对应。每当`物理映射（GPA->HVA)`发生改变时，会**回调这些函数**。
+
+所有的MemoryListener都会挂在**全局变量memory\_listeners链表**上。同时，AddressSpace也会有一个链表连接器自己注册的MemoryListener。
+
+```cpp
+static QTAILQ_HEAD(, MemoryListener) memory_listeners
+    = QTAILQ_HEAD_INITIALIZER(memory_listeners);
 ```
 
 ## 2.8. AddressSpaceDispatch
