--- a/Virtualization/QEMU/3. memory/2. 主要结构体分析.md
+++ b/Virtualization/QEMU/3. memory/2. 主要结构体分析.md
@@ -234,6 +234,21 @@ struct RAMBlock {
 
 这个全局链表描述了整个虚拟机使用的真正的**所有主机虚拟内存**.
 
+```cpp
+typedef struct RAMList {
+    QemuMutex mutex;
+    RAMBlock *mru_block;
+    /* RCU-enabled, writes protected by the ramlist lock. */
+    QLIST_HEAD(, RAMBlock) blocks;
+    DirtyMemoryBlocks *dirty_memory[DIRTY_MEMORY_NUM];
+    uint32_t version;
+    QLIST_HEAD(, RAMBlockNotifier) ramblock_notifiers;
+} RAMList;
+extern RAMList ram_list;
+
+RAMList ram_list = { .blocks = QLIST_HEAD_INITIALIZER(ram_list.blocks) };
+```
+
 所有的RAMBlock通过**next字段**连接起来，表头保存在一个**全局的RAMList结构**中，但是根据代码来看，**原始MR分配**内存时分配的是**一整块block**，之所以这样做也许是为了扩展用吧！！
 
 **RAMList**中有个字段**mru_block指针**，指向**最近使用的block**，这样需要**遍历所有的block**时，先判断指定的block是否是`mru_block`，如果不是再进行遍历从而提高效率。
