--- Auto-Git Commit ---

--- a/Virtualization/QEMU/3. memory/2. 主要结构体分析.md
+++ b/Virtualization/QEMU/3. memory/2. 主要结构体分析.md
@@ -230,7 +230,7 @@ struct RAMBlock {
 
 然而**ram\_addr\_t命名空间**并**不等同**于**guest物理内存空间！！！**，它仅表示**所有RAMBlock集合**构成的**一个地址空间**。
 
-### 全局链表
+### RAMList全局链表
 
 这个全局链表描述了整个虚拟机使用的真正的**所有主机虚拟内存**.
 
