--- Auto-Git Commit ---

--- a/Virtualization/QEMU/3. memory/2. 主要结构体分析.md
+++ b/Virtualization/QEMU/3. memory/2. 主要结构体分析.md
@@ -320,11 +320,11 @@ struct FlatView {
 
 在FlatView中，FlatRange表示按照需要被切分为了几个范围。
 
-## 2.6. MemoryRegionSection
+## 2.6. MemoryRegionSection: 虚拟机物理地址空间GPA
 
 在内存虚拟化中，还有一个重要的结构是MemoryRegionSection，这个结构通过函数`section_from_flat_range`由**FlatRange转换过来**。
 
-也就是说 `MemoryRegionSection对应于FlatRange，一个FlatRange代表一个物理地址空间的片段，但是其偏向于address-space，而MemoryRegionSection则在MR端显示的表明了分片，其结构如下
+也就是说 `MemoryRegionSection` 对应于`FlatRange`，**一个FlatRange**代表**一个虚拟机物理地址空间的片段**，但是其偏向于`address-space`，而**MemoryRegionSection**则在**MR端**显示的表明了分片，其结构如下
 
 ```cpp
 // include/exec/memory.h
@@ -346,7 +346,16 @@ struct MemoryRegionSection {
 
 MemoryRegionSection表示的是**MemoryRegion的一部分**。
 
+其中注意两个偏移，`offset_within_region`和`offset_within_address_space`。
+
+- 前者描述的是**该section**在**整个MR**中的**偏移**，一个**address_space**可能有**多个MR**构成，因此该offset是**局部**的。
+- 而`offset_within_address_space`是在**整个地址空间**中的偏移，是**全局**的offset。
+
 这个其实跟FlatRange差不多。
+
+## KVMSlot: 
+
+
 
 ## AddressSpace、MemoryRegion、FlatView、MemoryRegionSection与KVMslot的关系
 
