--- Auto-Git Commit ---

--- a/Virtualization/QEMU/3. memory/2. 主要结构体分析.md
+++ b/Virtualization/QEMU/3. memory/2. 主要结构体分析.md
@@ -355,13 +355,35 @@ MemoryRegionSection表示的是**MemoryRegion的一部分**。
 
 ## KVMSlot: 
 
+```cpp
+typedef struct KVMSlot
+{
+    // 客户机物理地址 GPA
+    hwaddr start_addr;
+    // 内存大小
+    ram_addr_t memory_size;
+    // HVA qemu用户空间地址
+    void *ram;
+    // slot 编号
+    int slot;
+    int flags;
+    int old_flags;
+    /* Dirty bitmap cache for the slot */
+    unsigned long *dirty_bmap;
+} KVMSlot;
+```
 
+KVMSlot更接近KVM.
+
+kvm_userspace_memory_region是和kvm共享的一个结构，说共享不太恰当，但是其实最终作为参数给kvm使用的，kvm获取控制权后，从栈中复制该结构到内核，其中字段意思就很简单，不在赘述。
 
 ## AddressSpace、MemoryRegion、FlatView、MemoryRegionSection与KVMslot的关系
 
 这几个数据结构关系如下：
 
 ![](./images/2019-06-10-11-58-47.png)
+
+
 
 ## 2.7. MemoryListener
 
