--- Auto-Git Commit ---

--- a/Virtualization/QEMU/3. memory/2. 主要结构体分析.md
+++ b/Virtualization/QEMU/3. memory/2. 主要结构体分析.md
@@ -230,7 +230,7 @@ struct RAMBlock {
 
 然而**ram\_addr\_t命名空间**并**不等同**于**guest物理内存空间！！！**，它仅表示**所有RAMBlock集合**构成的**一个地址空间**。
 
-### RAMList全局链表
+### 2.3.1. RAMList全局链表
 
 这个全局链表描述了整个虚拟机使用的真正的**所有主机虚拟内存**.
 
@@ -263,13 +263,13 @@ RAMList ram_list = { .blocks = QLIST_HEAD_INITIALIZER(ram_list.blocks) };
 
 ## 2.5. FlatView: 虚拟机物理地址空间
 
-### AddressSpace 与 FlatView
+### 2.5.1. AddressSpace 与 FlatView
 
 AddressSpace下面**root及其子树**形成了一个**虚拟机的物理地址！！！**，但是在往**kvm进行设置！！！**的时候，需要将其转换为一个**平坦的地址模型**，也就是从0开始的。
 
 这个就用FlatView表示，**一个AddressSpace**对应**一个FlatView**。FlatView管理 MR 展开后得到的所有 FlatRange . 
 
-### FlatView相关结构体
+### 2.5.2. FlatView相关结构体
 
 ```cpp
 // memory.c
@@ -353,7 +353,7 @@ MemoryRegionSection表示的是**MemoryRegion的一部分**。
 
 这个其实跟FlatRange差不多。
 
-## KVMSlot: 
+## 2.7. KVMSlot:
 
 ```cpp
 typedef struct KVMSlot
@@ -377,15 +377,15 @@ KVMSlot更接近KVM.
 
 kvm_userspace_memory_region是和kvm共享的一个结构，说共享不太恰当，但是其实最终作为参数给kvm使用的，kvm获取控制权后，从栈中复制该结构到内核，其中字段意思就很简单，不在赘述。
 
-## AddressSpace、MemoryRegion、FlatView、MemoryRegionSection与KVMslot的关系
+## 2.8. AddressSpace、MemoryRegion、FlatView、MemoryRegionSection与KVMslot的关系
 
 这几个数据结构关系如下：
 
 ![](./images/2019-06-10-11-58-47.png)
 
+![2020-02-28-15-18-57.png](./images/2020-02-28-15-18-57.png)
 
-
-## 2.7. MemoryListener
+## 2.9. MemoryListener
 
 ```cpp
 // include/exec/memory.h
@@ -427,7 +427,7 @@ static QTAILQ_HEAD(, MemoryListener) memory_listeners
     = QTAILQ_HEAD_INITIALIZER(memory_listeners);
 ```
 
-## 2.8. AddressSpaceDispatch
+## 2.10. AddressSpaceDispatch
 
 为了在**虚拟机退出**时，能够顺利根据**虚拟机物理地址**找到**对应的HVA**地址，qemu会有一个AddressSpaceDispatch结构，用来在AddressSpace中进行位置的找寻，继而完成对IO/MMIO地址的访问。
 
@@ -445,7 +445,7 @@ struct AddressSpaceDispatch {
 
 这里面有一个**PhysPageMap**，这其实也是**保存**了一个**GPA\-\>HVA**的**一个映射**，通过**多层页表实现**，当**kvm exit退到qemu**之后，通过这个AddressSpaceDispatch里面的map查找对应的MemoryRegionSection，继而找到对应的主机HVA。
 
-# 3. 结构体之间的联系
+## 2.11. memory_listeners、AddressSpace、AddressSpaceDispatch等之间的联系
 
 这几个结构体的关系如下：
 
@@ -453,6 +453,8 @@ struct AddressSpaceDispatch {
 
 ![2020-02-27-22-12-07.png](./images/2020-02-27-22-12-07.png)
 
-# 4. 参考
+# 3. 参考
 
 https://blog.csdn.net/Shirleylinyuer/article/details/83592614
+
+https://www.cnblogs.com/ck1020/p/6729224.html
