--- Auto-Git Commit ---

--- a/Virtualization/QEMU/3. memory/3. 具体实现机制.md
+++ b/Virtualization/QEMU/3. memory/3. 具体实现机制.md
@@ -60,9 +60,12 @@ static QTAILQ_HEAD(, MemoryListener) memory_listeners
     = QTAILQ_HEAD_INITIALIZER(memory_listeners);
 ```
 
-函数中，如果`memory_listeners`为空或者**当前listener**的**优先级**大于最后一个listener的优先级，即直接把当前listener插入。否则需要**挨个遍历链表**，找到合适的位置。具体按照优先级升序查找。
+函数中，如果`memory_listeners`为空或者**当前listener**的**优先级**大于最后一个listener的优先级，即直接把当前listener插入。否则需要**挨个遍历链表**，找到**合适的位置**。具体按照优先级升序查找。
 
 在函数最后还针对**每个address_space**，调用`listener_add_address_space`函数，该函数对其对应的`address_space`管理的**flatrange**向**KVM注册**。当然，实际上**此时address_space**尚未经过初始化，所以这里的循环其实是**空循环**。
 
 # AddressSpace的初始化
 
+涉及函数：`cpu_exec_init_all() memory_map_init()` 
+
+在第一节中已经**注册了listener**，但是**addressspace尚未初始化**，本节就介绍下其初始化流程。从上节的configure_accelerator()函数往下走，会执行cpu_exec_init_all()函数，该函数主要初始化了IO地址空间和系统地址空间。memory_map_init()函数初始化系统地址空间，有一个全局的MemoryRegion指针system_memory指向该区域的MemoryRegion结构。
