--- Auto-Git Commit ---

--- a/Virtualization/QEMU/3. memory/3. 具体实现机制.md
+++ b/Virtualization/QEMU/3. memory/3. 具体实现机制.md
@@ -68,4 +68,26 @@ static QTAILQ_HEAD(, MemoryListener) memory_listeners
 
 涉及函数：`cpu_exec_init_all() memory_map_init()` 
 
-在第一节中已经**注册了listener**，但是**addressspace尚未初始化**，本节就介绍下其初始化流程。从上节的configure_accelerator()函数往下走，会执行cpu_exec_init_all()函数，该函数主要初始化了IO地址空间和系统地址空间。memory_map_init()函数初始化系统地址空间，有一个全局的MemoryRegion指针system_memory指向该区域的MemoryRegion结构。
+在第一节中已经**注册了listener**，但是**addressspace尚未初始化**，本节就介绍下其初始化流程。
+
+从上节的`configure_accelerator()`函数往下走，会执行`cpu_exec_init_all()`函数，该函数主要**初始化**了**IO地址空间**和**系统地址空间**。`memory_map_init()`函数初始化系统地址空间，有一个**全局**的**MemoryRegion**指针`system_memory`指向该区域的MemoryRegion结构。
+
+```cpp
+static void memory_map_init(void)
+{
+    /*为system_memory分配内存*/
+    system_memory = g_malloc(sizeof(*system_memory));
+
+    memory_region_init(system_memory, NULL, "system", UINT64_MAX);
+    /*初始化全局的address_space_memory*/
+    address_space_init(&address_space_memory, system_memory, "memory");
+
+    system_io = g_malloc(sizeof(*system_io));
+    memory_region_init_io(system_io, NULL, &unassigned_io_ops, NULL, "io",
+                          65536);
+    address_space_init(&address_space_io, system_io, "I/O");
+}
+```
+
+所以在函数起始，就对`system_memory`分配了内存，然后调用了`memory_region_init`函数对其进行初始化，其中size设置为整个地址空间：如果是64位就是2^64.接着调用了address_space_init函数对address_space_memory进行了初始化。
+
