--- Auto-Git Commit ---

--- a/Virtualization/QEMU/3. memory/3. 具体实现机制.md
+++ b/Virtualization/QEMU/3. memory/3. 具体实现机制.md
@@ -89,5 +89,32 @@ static void memory_map_init(void)
 }
 ```
 
-所以在函数起始，就对`system_memory`分配了内存，然后调用了`memory_region_init`函数对其进行初始化，其中size设置为整个地址空间：如果是64位就是2^64.接着调用了address_space_init函数对address_space_memory进行了初始化。
+所以在函数起始，就对`system_memory`分配了内存，然后调用了`memory_region_init`函数对其进行初始化，其中**size**设置为**整个地址空间**：如果是**64位**就是`2^64`.
+
+接着调用了`address_space_init`函数对`address_space_memory`进行了初始化。
+
+```cpp
+void address_space_init(AddressSpace *as, MemoryRegion *root, const char *name)
+{
+    if (QTAILQ_EMPTY(&address_spaces)) {
+        memory_init();
+    }
+
+    memory_region_transaction_begin();
+    /*指定address_space_memory的root为system_memory*/
+    as->root = root;
+    /*创建并关联了一个FlatView*/
+    as->current_map = g_new(FlatView, 1);
+    /*初始化FlatView*/
+    flatview_init(as->current_map);
+    as->ioeventfd_nb = 0;
+    as->ioeventfds = NULL;
+    /*把address_space_memory插入全局链表*/
+    QTAILQ_INSERT_TAIL(&address_spaces, as, address_spaces_link);
+    as->name = g_strdup(name ? name : "anonymous");
+    address_space_init_dispatch(as);
+    memory_region_update_pending |= root->enabled;
+    memory_region_transaction_commit();
+}
+```
 
