--- Auto-Git Commit ---

--- a/Virtualization/QEMU/3. memory/3. 具体实现机制.md
+++ b/Virtualization/QEMU/3. memory/3. 具体实现机制.md
@@ -87,6 +87,30 @@ static void memory_map_init(void)
                           65536);
     address_space_init(&address_space_io, system_io, "I/O");
 }
+
+memory_map_init()                    // 初始化 MemoryRegion 及其对应的 FlatView
+ ├─ memory_region_init(system_memory, NULL, "system", UINT64_MAX);   // 初始化 system_memory 全局 MemoryRegion
+ ├─ address_space_init(&address_space_memory, system_memory, "memory");;   // 初始化 address_space_memory 全局 AddressSpace, 将 system_memory 作为 root(根MR)
+ |   ├─ QTAILQ_INIT(&as->listeners);      // 初始化该 AddressSpace 的 listeners 链表
+ |   ├─ QTAILQ_INSERT_TAIL(&address_spaces, as, address_spaces_link);       // 初始化该 AddressSpace 为全局 as链表address_spaces的节点(通过as的 address_spaces_link 域)
+ |   └─ address_space_update_topology(as)      // 为 AddressSpace 生成 FlatView
+ |   |   ├─ MemoryRegion *physmr = memory_region_get_flatview_root(as->root);  // 获取as指向的mr 
+ |   |   ├─ generate_memory_topology(physmr)   // 将 MemoryRegion 的拓扑结构渲染为 FlatRange 数组
+ |   |   |   ├─ view = flatview_new(mr)     // 参数其实就是 physmr
+ |   |   |   ├─ render_memory_region(&view, mr, ...) // 根据 mr 生成 view
+ |   |   |   └─ flatview_simplify(&view) // 合并相邻的 FlatRange
+ |   |   └─ address_space_set_flatview(as);
+ |   |       ├─ address_space_update_topology_pass(AddressSpce, FlatView_old, FlatView_new) // 遍历FlatView的所有FlatRange, 也就是得到若干个 MemoryRegionSection, 将其注册到KVM
+ |   |       |   └─ MEMORY_LISTENER_UPDATE_REGION(frnew, as, Forward, region_add)        // 回调函数 region_add, 对应的是kvm_region_add()
+ |   |       |   └─ kvm_region_add()        // region_add 对应的回调实现
+ |   |       |       └─ kvm_set_phys_mem()  // 根据传入的 section 填充 KVMSlot
+ |   |       |           └─ kvm_set_user_memory_region() // 将 QEMU 侧的内存布局注册到 KVM 中
+ |   |       |               └─ kvm_ioctl(KVM_SET_USER_MEMORY_REGION)
+ |   |       |
+ |   └─ address_space_update_ioeventfds(as)   
+ |
+ ├─ memory_region_init_io(system_io, NULL, &unassigned_io_ops, NULL, "io", 65536);   // 初始化 system_io 全局 MemoryRegion
+ └─ address_space_init(&address_space_io, system_io, "I/O");   // 初始化 address_space_io 全局 AddressSpace, 将 system_io 作为 root(根MR)
 ```
 
 所以在函数起始，就对`system_memory`分配了内存，然后调用了`memory_region_init`函数对其进行初始化，其中**size**设置为**整个地址空间**：如果是**64位**就是`2^64`.
@@ -96,41 +120,23 @@ static void memory_map_init(void)
 ```cpp
 void address_space_init(AddressSpace *as, MemoryRegion *root, const char *name)
 {
-    if (QTAILQ_EMPTY(&address_spaces)) {
-        memory_init();
-    }
-
-    memory_region_transaction_begin();
-    /*指定address_space_memory的root为system_memory*/
-    as->root = root;
-    /*创建并关联了一个FlatView*/
-    as->current_map = g_new(FlatView, 1);
-    /*初始化FlatView*/
-    flatview_init(as->current_map);
-    as->ioeventfd_nb = 0;
-    as->ioeventfds = NULL;
-    /*把address_space_memory插入全局链表*/
-    QTAILQ_INSERT_TAIL(&address_spaces, as, address_spaces_link);
-    as->name = g_strdup(name ? name : "anonymous");
-    address_space_init_dispatch(as);
-    memory_region_update_pending |= root->enabled;
-    memory_region_transaction_commit();
-}
-
-void address_space_init(AddressSpace *as, MemoryRegion *root, const char *name)
-{
     memory_region_ref(root);
     /*指定address_space_memory的root为system_memory*/
     as->root = root;
     as->current_map = NULL;
     as->ioeventfd_nb = 0;
     as->ioeventfds = NULL;
-    初始化
+    /* 初始化AddressSpace的listeners链表 */
     QTAILQ_INIT(&as->listeners);
+    /*把address_space_memory插入全局链表*/
     QTAILQ_INSERT_TAIL(&address_spaces, as, address_spaces_link);
+    /* AddressSpace的名称 */
     as->name = g_strdup(name ? name : "anonymous");
     address_space_update_topology(as);
     address_space_update_ioeventfds(as);
 }
+
+
 ```
 
+函数主要做了以下几个工作，设置**addressSpaceh和MR的关联**，并**初始化对应的FlatView**, 设置**其名称**。最后把address_space_memory加入到全局的address_spaces链表中，最后调用memory_region_transaction_commit()提交本次修改，关于memory_region_transaction_commit后imianzai做论述。回到memory_map_init()函数中，接下来按照同样的模式对IO区域system_io和IO地址空间address_space_io做了初始化。
